Added more files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-/node_modules/
-/package-lock.json
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
 
 **/.DS_Store
